--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,8 +57,20 @@ set_property(TARGET xxhash PROPERTY C_STANDARD 99)
 # munit
 add_library(munit "${LIB_DIR}/munit/munit.c")
 set_property(TARGET munit PROPERTY C_STANDARD 99)
+# gaviota
+file(GLOB_RECURSE GAVIOTA_FILES "${LIB_DIR}/gaviota/*.h" "${LIB_DIR}/gaviota/*.c")
+add_library(gaviota "${GAVIOTA_FILES}")
+target_include_directories(gaviota PRIVATE "${LIB_DIR}/gaviota/sysport/")
+target_include_directories(gaviota PRIVATE "${LIB_DIR}/gaviota/compression/")
+target_include_directories(gaviota PRIVATE "${LIB_DIR}/gaviota/compression/huffman/")
+target_include_directories(gaviota PRIVATE "${LIB_DIR}/gaviota/compression/liblzf/")
+target_include_directories(gaviota PRIVATE "${LIB_DIR}/gaviota/compression/zlib/")
+target_include_directories(gaviota PRIVATE "${LIB_DIR}/gaviota/compression/lzma/")
+target_link_libraries(gaviota "-lm -lpthread")
+target_compile_definitions(gaviota PRIVATE NDEBUG Z_PREFIX)
+set_property(TARGET gaviota PROPERTY C_STANDARD 99)
 
-set_target_properties(base64 cjson mt64 plibsys xxhash munit PROPERTIES COMPILE_FLAGS "-w")
+set_target_properties(base64 cjson mt64 plibsys xxhash munit gaviota PROPERTIES COMPILE_FLAGS "-w")
 
 # ZULOID_LIB
 file(GLOB_RECURSE SRC_FILES "${INCLUDE_DIR}/*.h" "${SRC_DIR}/*.c")
@@ -66,7 +78,7 @@ list(REMOVE_ITEM SRC_FILES "${SRC_DIR}/main.c")
 add_library(ZULOID_LIB STATIC "${SRC_FILES}")
 target_include_directories(ZULOID_LIB PUBLIC "${INCLUDE_DIR}")
 target_include_directories(ZULOID_LIB SYSTEM PUBLIC "${LIB_DIR}")
-target_link_libraries(ZULOID_LIB base64 cjson mt64 plibsys xxhash)
+target_link_libraries(ZULOID_LIB base64 cjson mt64 plibsys xxhash gaviota)
 target_compile_definitions(ZULOID_LIB PRIVATE
     PROJECT_BUILD_DATE=\"${BUILD_DATE}\"
     PROJECT_VERSION=\"${PROJECT_VERSION}\")
